Configure CORS for production
- Add CORS_ORIGIN environment variable support
- Allow multiple comma-separated origins
- Default to localhost for development
- Log blocked origins for debugging
- Enable credentials for cookie/session support

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,9 @@
 # DO NOT commit .env to git!
 
 PORT=3001
+
+# CORS: Allowed origins for cross-origin requests
+# In production (Railway), set to your Vercel domain
+# Multiple origins can be comma-separated
+# Example: CORS_ORIGIN=https://your-site.vercel.app,https://your-custom-domain.com
+CORS_ORIGIN=
