--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,6 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "fast-xml-parser": "^5.3.3",
-    "multer": "^1.4.5-lts.2",
-    "openai": "^5.23.1",
-    "pdfkit": "^0.17.2"
+    "multer": "^1.4.5-lts.2"
   }
 }
